# rust-api

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile
.devcontainer/mongo/: Dockerfile
.devcontainer/mysql/: Dockerfile  my.cnf
.devcontainer/mysql/initdb.d/: 001_create_db.sql  002_m_country.sql  003_m_address.sql
app/: Cargo.toml
app/src/: main.rs
app/src/database/: mysql.rs
