[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "mysql",
    "runtime-actix-native-tls",
    "chrono",
] }
once_cell = "1.17.0"
anyhow = "1.0.68"
